[tool.poetry]
name = "railway-tut-02"
version = "0.1.0"
description = ""
authors = ["Johannes Gutekunst <johannes.gutekunst@t-online.de>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# vtk = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"
mypy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
